crates/adapters/state-planning/tests/snapshots/parse__parses_nsw_da_processing_fixture.snap
---
source: crates/adapters/state-planning/tests/parse.rs
expression: rows
---
[
  {
    "dataflow_id": "state_planning.nsw_da_processing",
    "measure_id": "value",
    "dimensions": {
      "council": "all",
      "development_type": "all",
      "jurisdiction": "NSW",
      "metric": "average_assessment_days"
    },
    "unit": "days",
    "time": "2026-03-31T00:00:00+00:00",
    "time_precision": "Day",
    "value": 54.0,
    "status": "Normal",
    "attributes": {
      "attribution": "State planning dashboard sources: NSW Planning and Victoria Planning",
      "license": "State publication terms",
      "publication_id": "nsw-da-processing-2026",
      "source": "State planning authorities",
      "source_url": "https://www.planning.nsw.gov.au/data/nsw-da-processing-2026.csv"
    },
    "source_artifact_id": "f6f9d6e6ded521c9c7db61eafdaacf3dc412836462f26689921f15e2167bdf5e"
  },
  {
    "dataflow_id": "state_planning.nsw_da_processing",
    "measure_id": "value",
    "dimensions": {
      "council": "all",
      "development_type": "all",
      "jurisdiction": "NSW",
      "metric": "determinations_count"
    },
    "unit": "count",
    "time": "2026-03-31T00:00:00+00:00",
    "time_precision": "Day",
    "value": 12345.0,
    "status": "Normal",
    "attributes": {
      "attribution": "State planning dashboard sources: NSW Planning and Victoria Planning",
      "license": "State publication terms",
      "publication_id": "nsw-da-processing-2026",
      "source": "State planning authorities",
      "source_url": "https://www.planning.nsw.gov.au/data/nsw-da-processing-2026.csv"
    },
    "source_artifact_id": "f6f9d6e6ded521c9c7db61eafdaacf3dc412836462f26689921f15e2167bdf5e"
  },
  {
    "dataflow_id": "state_planning.nsw_da_processing",
    "measure_id": "value",
    "dimensions": {
      "council": "all",
      "development_type": "residential",
      "jurisdiction": "NSW",
      "metric": "average_assessment_days"
    },
    "unit": "days",
    "time": "2026-03-31T00:00:00+00:00",
    "time_precision": "Day",
    "value": 48.0,
    "status": "Normal",
    "attributes": {
      "attribution": "State planning dashboard sources: NSW Planning and Victoria Planning",
      "license": "State publication terms",
      "publication_id": "nsw-da-processing-2026",
      "source": "State planning authorities",
      "source_url": "https://www.planning.nsw.gov.au/data/nsw-da-processing-2026.csv"
    },
    "source_artifact_id": "f6f9d6e6ded521c9c7db61eafdaacf3dc412836462f26689921f15e2167bdf5e"
  }
]
